[package]
name = "pile"
version = "0.1.0"
authors = ["Clement Lee <2158058+clementlee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byte-unit = "4.0"
clap = "3.0.0-beta.2"
dialoguer = "0.8"
env_logger = "0.8.3"
fs2 = "0.4.3"
hex = "0.4"
indicatif = "0.15"
log = "0.4.0"
rusqlite = "0.25"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.2"
shellexpand = "2.1"
toml = "0.5"
walkdir = "2"
